test/data/semantic-errors/expression-not-iterable.ava
for each x in 10 { x++; };